// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > matches snapshot in dark mode (default tone) 1`] = `
<div>
  <span
    class="MuiBox-root css-30c8a8"
    data-testid="tag"
    data-tone="default"
  >
    PROD
  </span>
</div>
`;

exports[`Tag > matches snapshot in light mode (default tone) 1`] = `
<div>
  <span
    class="MuiBox-root css-h7ckgq"
    data-testid="tag"
    data-tone="default"
  >
    PROD
  </span>
</div>
`;
